@@ -3,16 +3,19 @@ package io.hhplus.tdd.point;
 import io.hhplus.tdd.database.PointHistoryTable;
 import io.hhplus.tdd.database.UserPointTable;
 import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Collections;
 import java.util.List;
 
-@Slf4j
-@RequestMapping("/point")
 @RestController
+@RequestMapping("/point")
 public class PointController {
+
+    private static final Logger log = LoggerFactory.getLogger(PointController.class);
 
     @Autowired
     private UserPointTable userPointTable; // TODO - service / repository 계층 분리
@@ -24,7 +27,9 @@ public class PointController {
      * TODO - 특정 유저의 포인트를 조회하는 기능을 작성해주세요.
      */
     @GetMapping("{id}")
-    public UserPoint point(@PathVariable Long id) {
+    public UserPoint point(
+            @PathVariable long id
+    ) {
         try {
             return userPointTable.selectById(id);
         } catch (InterruptedException e) {
@@ -36,15 +41,20 @@ public class PointController {
      * TODO - 특정 유저의 포인트 충전/이용 내역을 조회하는 기능을 작성해주세요.
      */
     @GetMapping("{id}/histories")
-    public List<PointHistory> history(@PathVariable Long id) {
-        return Collections.emptyList();
+    public List<PointHistory> history(
+            @PathVariable long id
+    ) {
+        return List.of();
     }
 
     /**
      * TODO - 특정 유저의 포인트를 충전하는 기능을 작성해주세요.
      */
     @PatchMapping("{id}/charge")
-    public UserPoint charge(@PathVariable Long id, @RequestBody Long amount) {
+    public UserPoint charge(
+            @PathVariable long id,
+            @RequestBody long amount
+    ) {
         if (amount <= 0L) {
             throw new RuntimeException("'amount'는 자연수이어야 합니다.");
         }
@@ -64,7 +74,10 @@ public class PointController {
      * TODO - 특정 유저의 포인트를 사용하는 기능을 작성해주세요.
      */
     @PatchMapping("{id}/use")
-    public UserPoint use(@PathVariable Long id, @RequestBody Long amount) {
-        return new UserPoint(0L, 0L, 0L);
+    public UserPoint use(
+            @PathVariable long id,
+            @RequestBody long amount
+    ) {
+        return new UserPoint(0, 0, 0);
     }
 }
